force-app/main/default/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Donor (Organization) of the transaction</description>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Tracks the total amount that a donor made in one portal transaction</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_Gift_Processor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Gift processor that should audit / approve the transaction</description>
        <label>Assigned Gift Processor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transactions_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Donor (Constituent) of the transaction</description>
        <label>Constituent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Expiration_Date__c</fullName>
        <label>Credit Card Expiration Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <description>Encrypted credit card number for data security</description>
        <label>Credit Card Number</label>
        <length>19</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Card_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Date__c</fullName>
        <description>The date that the transaction is created and credited</description>
        <label>Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <description>The file entry date of the transaction</description>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For anonymous user donation to link to the interim record that contains their info</description>
        <label>Interim</label>
        <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Anonymous_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the donation transaction is created by anonymous user that not logged in</description>
        <label>Is Anonymous User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Donor&apos;s note to this transaction</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Online_Payment_Charge_ID__c</fullName>
        <label>Online Payment Charge ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The transaction in a pledge payment, and this field indicates which pledge is paying to</description>
        <label>Pledge</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Name_Auto_Number__c</fullName>
        <displayFormat>TX-{0000000}</displayFormat>
        <label>Transaction Name Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Transaction_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Gift</fullName>
        <active>true</active>
        <description>Gift</description>
        <label>Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payment</fullName>
        <active>true</active>
        <description>Pledge payment / gift payment</description>
        <label>Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pledge</fullName>
        <active>true</active>
        <description>Pledge</description>
        <label>Pledge</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>